# pejo-accelerator

./: .gitignore  example.yml  pyproject.toml  readme.md
metadata/: README.md  config.yml
metadata/finance/: README.md  custtable.yml  fact_salestable.yml
metadata/sales/: README.md  custtable.yml  salestable.yml
pejo/: __init__.py  enums.py  schemas.py
pejo/adapters/: base.py  dataverse.py  dynamics.py  fo.py
pejo/core/: engine.py  hashing.py  logging.py  merge_builder.py
pejo/features/: __init__.py  enums.py
pejo_accelerator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_schemas_and_engine.py
