[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fo_accelerator"
version = "0.0.1"
description = "F&O Fabric Accelerator SDK"
authors = [
  {name = "Your Name"}
]
dependencies = [
  "pyspark"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]