[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pejo_accelerator"
version = "0.0.60"
description = "PeJo Fabric Accelerator SDK"
authors = [
  {name = "Peter Johannessen"}
]
dependencies = [
  "pyspark",
  "pyyaml"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]